tests/ui/opts/no_args.stderr
error: unexpected end of input, expected at least one argument
 --> tests/ui/opts/no_args.rs:4:10
  |
4 | #[funcmap()]
  |          ^^
